cabal-version:   3.14
name:            haskell
version:         0.1.0.0
license:         NONE
author:          SSGonda
maintainer:      ssgonda@up.edu.ph
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable haskell
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.21.0.0, miso, containers, websockets, aeson, text, mtl, network, time, random, bytestring, jsaddle
    hs-source-dirs:   app
    default-language: Haskell2010
